# Elo-MMR-Py

./: .gitignore  Cargo.toml  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml
elo_mmr_py/: __init__.py
rust/: lib.rs
src/: lib.rs
src/elo_mmr_py/: __init__.py
src/rust/: lib.rs
tests/: test_elo_mmr_py.py
