[package]
name = "elo-mmr-python-bindings"
version = "0.1.0"
authors = ["Aleksey Ropan"]
edition = "2021"

[lib]
name = "elo_mmr_py_bindings"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.16.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multi-skill = { git = "https://github.com/EbTech/Elo-MMR", rev="4a23c88a0c167110622a0ec4f5b8f50c53bb9ca3" }
